--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
         <CENTER>
             <h4 class="margin-top-2 " style="text-align: center; "><u>TRAINING ORIENTED</u>
                 <div class="links-container ">
-                    <br><span>PPT/ Video Editing(<a href="https://drive.google.com/drive/folders/11LpvLi8JP353YdTQABYvafz7Miyav0qW?usp=sharing " class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank
-        ">View</a>)<br> Story Telling (<a href="https://drive.google.com/file/d/1jCuHbMD7eK5hCNlj5oPlgRNhxGAkR0A2/view?usp=sharing "
-                            class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>)
+                    <br><span>Content Editing(<a href="https://drive.google.com/drive/folders/11LpvLi8JP353YdTQABYvafz7Miyav0qW?usp=sharing " class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank
+        ">View</a>) | Story Teller (<a href="https://drive.google.com/file/d/1jCuHbMD7eK5hCNlj5oPlgRNhxGAkR0A2/view?usp=sharing "
+                            class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>) <be>
+                                 Trainer OVeral Experience (<a href="https://drive.google.com/file/d/18s7eH33DhL_T_b43bHlfSkN9VoQtLJVD/view?usp=sharing"
+                            class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">CV</a>)
 </span> </div>
         </CENTER>
 
