--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <h4 class="margin-top-2 " style="text-align: center; "><u>TRAINING ORIENTED</u>
                 <div class="links-container ">
                     <br><span>Content Editing(<a href="https://drive.google.com/drive/folders/11LpvLi8JP353YdTQABYvafz7Miyav0qW?usp=sharing " class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank
-        ">View</a>) | Story Teller (<a href="https://drive.google.com/file/d/1jCuHbMD7eK5hCNlj5oPlgRNhxGAkR0A2/view?usp=sharing "
-                            class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>) <be>
+        ">View</a>) <br> Story Teller (<a href="https://drive.google.com/file/d/1jCuHbMD7eK5hCNlj5oPlgRNhxGAkR0A2/view?usp=sharing "
+                            class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>) <br>
                                  Trainer OVerall Experience (<a href="https://drive.google.com/file/d/18s7eH33DhL_T_b43bHlfSkN9VoQtLJVD/view?usp=sharing"
                             class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">CV</a>)
 </span> </div>
