--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <!-- Image and name container. Change to your picture here. -->
         <div style="text-align: center ">
             <img src="2025.png" class="w3-margin " alt="image " width="150px " height="150px " style="border-radius: 50%; ">
-            <h4 class="margin-top-2 " style="text-align: center; "><span class="name w3-padding w3-pink w3-round " style="font-weight: bolder; ">I'm Archana! <br> <a href=" https://archana4290.github.io/Archana-Resume/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank "><i></i>"Let Me Brief About Me"</i></i></a></span></h4>
+            <h4 class="margin-top-2 " style="text-align: center; "><span class="name w3-padding w3-pink w3-round " style="font-weight: bolder; ">I'm Archana! <br> <a href=" https://archana4290.github.io/Archana-Resume/" class="w3-button w3-round-xlarge w
+                                                                                                                                                                       3-theme-l1 w3-border link " target="_blank "><i>"Let Me Brief About Me"</i></i></a></span></h4>
         </div>
 
 
