--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h4 class="margin-top-2 " style="text-align: center; "><u>WEBPAGES</u>
             <CENTER>
                 <div class="links-container ">
-                    <p>Portfolio(<a href="https://arcarch4.github.io/portfolio1/ " class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>)
+                    <p>Portfolio(<a href="https://archana4290.github.io/portfolio/ " class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>)
                         <br> Wordpress(<a href="https://helpsocially.wordpress.com/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link " target="_blank ">View</a>)
                 </div>
             </CENTER>
